--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mdi/js": "^5.8.55",
     "core-js": "^3.6.5",
+    "firebase": "^8.2.2",
     "scrollreveal": "^4.0.7",
     "vue": "^2.6.11",
     "vue-router": "^3.4.9",
