--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "scrollreveal": "^4.0.7",
     "vue": "^2.6.11",
     "vue-router": "^3.4.9",
+    "vue-scrollto": "^2.20.0",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
